tests/transpiler/x/zig/group_by.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/group_by.zig:16:20: error: unable to infer array size
    const people: [_]People = [_]People{.{ .name = "Alice", .age = 30, .city = "Paris" }, .{ .name = "Bob", .age = 15, .city = "Hanoi" }, .{ .name = "Charlie", .age = 65, .city = "Paris" }, .{ .name = "Diana", .age = 45, .city = "Hanoi" }, .{ .name = "Eve", .age = 70, .city = "Paris" }, .{ .name = "Frank", .age = 22, .city = "Hanoi" }};
                   ^
